docs/v1.7.7/prd/model-aware-harness-prd.md
# PRD — 모델 인지 하네스(Model-Aware Harness) v1.7.7

작성일: 2026-09-10 · 상태: **초안(검토용)** · **선행: v1.7.6 하네스 구성 인터뷰**
요청: "최신 모델 가이드를 myharness 에 자동 적용할 수 있는가" 검토 → PRD 화
**범용성 요구:** OpenAI · Anthropic · Google · Qwen · xAI 등 **모든 모델 서비스에 적용 가능해야 한다**(사용자 명시)

> **릴리스 재편(2026-09-10, 사용자 결정):** 이 문서는 원래 v1.7.6 이었으나 **v1.7.7 로 이동**했다.
> v1.7.6 은 **하네스 구성 인터뷰**(`docs/v1.7.6/prd/harness-interview-prd.md`)가 가져간다.
>
> **왜 순서를 바꿨나 — 의존 방향이 그쪽이다.** 배치는 인터뷰 산출물을 **소비**한다:
> 인터뷰의 "실패 비용 비대칭"(오류 vs 지연) 답이 곧 `deep`/`standard`/`light` **배분 비율**이고,
> "비가역성 경계" 답이 게이트 강도를 정한다. 인터뷰 없이 배치를 먼저 하면 **배분 기준을 지어내야 한다**.
> 반대 방향 의존은 없다 — 인터뷰는 배치 없이도 Phase 1~6 산출물을 바꾼다.
>
> **긴급도도 그쪽이 높다.** 배치 부재는 *비효율*이다(`SKILL.md:109` 가 `opus` 를 박아둬도 하네스는 돈다).
> 인터뷰 부재는 *매 생성마다 구조적 오류*를 낳고 그 오류는 오래 안 보인다 — 측정 꼬리 누락이 22라운드를
> 돌 때까지 보이지 않았다.

> **범위 결정(유지):** 이 릴리스는 **최신 클라우드 모델을 에이전트에 효율적으로 배치·활용하는 것**에
> 집중한다. **sLM·로컬 모델은 "고려만" 한다** — 스키마가 나중에 담을 수 있는지만 확인하고 구현하지 않는다.
> 사유: 한 번의 작업에 설계·구현 복잡도를 몰아넣지 않는다(원래 사용자 판단이고 재편 후에도 유효하다).
> 로컬 실측 근거는 §10 에 보존해 **v1.7.8** 입력으로 쓴다.

---

## 1. 배경 — 왜 지금인가

모델 세대가 바뀔 때마다 프로바이더가 **공식 프롬프팅 가이드**를 낸다. 이 가이드는 단순한 팁이 아니라
**하네스가 지켜야 할 계약**을 담는다 — 금지된 파라미터 값, 필수 프롬프트 조각, 위임·검증 방식의 변경.

2026-09 시점에 확인한 것만으로도 네 프로바이더가 서로 다른 계약을 요구한다(§3 실측표).
그런데 myharness 는 지금 **모델을 하나의 이름으로만 다룬다** — `model: "opus"` 가 정본 곳곳에 박혀 있고,
프로바이더별 파라미터 체계나 행동 보정은 개념 자체가 없다.

### 1-1. 트리거가 된 두 사실

**(가) 정본이 모델 정책을 두 곳에서 다르게 말한다.**

| 위치 | 내용 |
|---|---|
| `SKILL.md:109` | 고추론 작업만 `opus`, 단순 작업은 경량 모델로 라우팅(비용 통제) |
| `references/agent-design-patterns.md:226` | **모든** 에이전트는 `model: "opus"` 를 사용한다 |
| 실측 | 이 레포 에이전트 6개 전부 `model: opus` — 라우팅 정책은 문서에만 있다 |

v1.7.5 가 26종 잡아낸 **"같은 규칙의 두 구현이 갈라진다"** 계열이 모델 정책에도 있다.
그리고 Astra 가이드는 이 상황을 직접 경고한다 — *"스킬 파일의 불명확하거나 상충하는 지침이
모델을 일찍 멈추게 하므로 감사하라"*.

**(나) 모델 이름은 썩는다.** v1.7.5 릴리스 작업 중 실측:

| 사건 | 결과 |
|---|---|
| `.env-review` 에 고정한 `CODEX_MODEL="gpt-5.4-mini"` | ChatGPT 계정에서 **HTTP 400** — 리뷰어 라운드 실패 |
| `gemini` CLI(legacy 폴백) | `IneligibleTierError` — 개인 티어에서 영구 사용 불가 |
| 대응 | `run-review.sh` 의 `AGY_MODEL` 하드코딩 제거 → 조건부 전달로 전환 |

**정본에 모델 ID 를 박으면 그 이름이 사라진 환경에서 게이트가 통째로 죽는다.**
현재 정본에 모델명이 **13곳** 박혀 있다.

---

## 2. 대상 사용자

| 사용자 | 필요 |
|---|---|
| 하네스 제작자(팩토리 사용자) | 도메인만 말하면 에이전트별로 **적절한 모델·추론 강도**가 자동 지정되기를 원한다 |
| 하네스 운영자 | 프로바이더가 모델을 단종·변경해도 **하네스가 죽지 않기를** 원한다 |
| 오케스트레이터(에이전트) | 위임·검증·보고 방식이 **그 모델의 성향에 맞게** 조정되기를 원한다 |
| 팩토리 메인테이너 | 새 프로바이더·새 세대가 나와도 **한 파일만 고치면** 되기를 원한다 |

---

## 3. 실측 — 프로바이더별 계약은 "같은 축, 다른 이름, 각기 다른 금지값"

2026-09-10 확인. 출처는 §9.

| 프로바이더 | 추론 강도 필드 | 값 어휘 | 기본 | 금지·제약 |
|---|---|---|---|---|
| Anthropic (Claude Fable 5) | effort | high / medium / low | high | 가이드: 일상 작업은 medium·low 로 충분 |
| OpenAI (GPT-6 Astra) | `reasoning.effort` | (low·medium·high 계열) | — | **`none` → HTTP 400** · `configuration_update` 로 캐시 유지한 채 중간 변경 |
| Google (Gemini 3.8 Flash) | `thinking_level` | LOW / MEDIUM / HIGH | MEDIUM | **`MINIMAL` → 400** · `temperature`·`top_p`·`top_k`·`frequency_penalty`·`presence_penalty`·`candidate_count` **제거 필수** · `thinking_budget` 혼용 시 400 |
| Qwen (3.8) | `reasoning_effort` (+`thinking_budget`) | low / medium / xhigh | xhigh | `enable_thinking=False` 하드 스위치 · **프롬프트 내 `/think`·`/no_think` 소프트 스위치** |
| xAI (Grok) | **미확인** | — | — | 조사 필요(§7 우선순위 P2) |
| **로컬**(ollama·LM Studio·llama.cpp) | 모델별 상이 | 모델별 상이 | — | **OpenAI 호환 API 로 통일 접근 가능**(§10 실측) · 서버 기동 상태가 변수 |

**여기서 도출되는 설계 제약 다섯 가지**

1. **축은 하나다** — "추론에 얼마나 쓸 것인가". 모든 프로바이더가 이 축을 갖는다.
2. **필드명이 전부 다르다** — `effort` / `reasoning.effort` / `thinking_level` / `reasoning_effort`.
3. **값 어휘가 다르고 대소문자도 다르다** — `high` vs `HIGH` vs `xhigh`.
4. **최저 단계가 각기 다르게 금지된다** — Astra `none`, Gemini `MINIMAL` 은 각각 400. **단순 하한 클램프로는 안 된다.**
5. **제거해야 할 파라미터가 있다** — Gemini 3.8 은 `temperature` 를 포함해 6개를 빼야 한다. 남기면 오류다.

### 3-1. 가이드의 처방은 서로 반대다

| 축 | Claude Fable 5 | GPT-6 Astra |
|---|---|---|
| 프롬프트 총량 | **걷어내라** — "유능해질수록 짧고 목적 지향적" | **더해라** — 5가지 성향별 보정 프롬프트를 그대로 제시 |
| 위임 | 이미 적극적 → 비동기로 운영하라 | **덜 위임하는 경향** → 병렬화 시점을 명시하라 |
| 검증 | 자기 비판 → **신선한 컨텍스트의 검증자 서브에이전트** | 스킬·`AGENTS.md` 감사 + 지시 우선순위 명시 |
| 진행 보고 | 모델 요약 신뢰 → **도구 결과 대조 후 근거 있는 보고** | 에이전트 간 메시지 **가독성** 확보(띄어쓰기 포함) |

**하나의 규칙 세트를 전 에이전트에 주입하는 방식은 성립하지 않는다.**
모델별로 처방이 상반되므로, 보정은 **모델에 귀속**되어야 한다.

### 3-2. Qwen 가이드가 던지는 반례 — 비용 통제 정책과 충돌

> *"멀티턴 에이전트에서 낮은 `reasoning_effort` 는 분석을 약화시켜 실패한 액션과 재시도를 늘리고,
> 결과적으로 **총 토큰과 실행 시간이 오히려 증가**한다."*

현재 `SKILL.md:109` 의 비용 통제 정책("단순 작업은 경량 모델")은 **단발 작업 기준**이다.
멀티턴 에이전트에서는 역효과일 수 있다. **티어 하향은 측정 후에만 확정해야 한다**(§6-3).

---

## 4. 기능 요구 — MA1~MA9 · MA15

> **MA14(에이전트 스캔)는 v1.7.6 으로 이동했다.** 스캔은 배치의 전제이면서 동시에
> 인터뷰 항목 ⑤(기존 자산)의 전제이고, 둘 다 `SKILL.md:35` Phase 0 을 실체화하는 같은 작업이다.
> 계약은 `docs/v1.7.6/prd/harness-interview-prd.md` §HI9 를 따른다.

### MA1. 역할 라벨(capability tier) 도입 — 모델 ID 를 정본에서 뺀다
정본은 모델 **이름**을 쓰지 않고 **역할 라벨**만 쓴다. 라벨은 3단계로 고정한다.

| 라벨 | 용도 | 예시 작업 |
|---|---|---|
| `deep` | 설계·판정·구현·보안 검토 | 아키텍처 설계, 외부리뷰 판정, 삭제 가드 |
| `standard` | 일반 실행·문서·조율 | 문서 동기화, 오케스트레이션, 일반 구현 |
| `light` | 기계적 검사·수집 | grep, 구조 검증, 트리거 eval, 파일 감사 |

**수용 기준:** 정본(`skills/myharness/**`)에서 `grep -c 'opus\|sonnet\|haiku\|Gemini 3\|gpt-'` 결과가
**모델 프로파일 파일 1개를 제외하고 0** 이다.

### MA2. 프로바이더 어댑터 — 라벨을 실제 파라미터로 해석
라벨 → `{모델 ID, 추론 필드명, 값, 제거할 파라미터, 금지값 회피 규칙}` 변환을 **한 곳**에서 한다.

**수용 기준:** 새 프로바이더 추가가 **파일 1개 편집**으로 끝난다. 코드 변경이 필요하면 실패.

**sLM 확장 슬롯(고려만 — 구현하지 않음):** 스키마는 로컬 런타임을 나중에 담을 수 있어야 한다.
실측(§10)에서 로컬은 OpenAI 호환 API 를 노출하므로 `{base_url, 기동 명령}` **두 필드만 추가**하면 된다.
**수용 기준:** 설계서에 이 두 필드의 자리를 예약하고, v1.7.8 에서 값을 채울 때 **스키마 변경이 없음**을 문서로 보인다.
이 릴리스에서는 필드를 비워 두고 로컬 프로파일을 등록하지 않는다.

### MA3. 금지값 회피 — 하한 클램프가 아니라 프로바이더별 최저 유효값
`light` 라벨을 Astra 는 `none` 이 아닌 최저 유효값으로, Gemini 3.8 은 `MINIMAL` 이 아닌 `LOW` 로 해석한다.

**수용 기준:** 각 프로바이더의 **금지값을 실제로 요청했을 때 400 이 나는지** 계약 테스트로 고정한다
(모델 호출 없이 파라미터 조립만 검증 — 오프라인).

### MA4. 파라미터 제거 규칙
Gemini 3.8 처럼 "이 파라미터를 빼야 한다"는 요구를 프로파일이 표현할 수 있어야 한다.

**수용 기준:** 프로파일에 `drop: [temperature, top_p, ...]` 를 쓰면 조립 결과에서 빠진다.

### MA5. 행동 보정(behavior knobs) — 모델 성향별 프롬프트 조각
가이드가 제시하는 **삽입용 프롬프트**를 모델에 귀속시켜 보관하고, 에이전트 생성·실행 시 주입한다.

보정은 **축으로 분류**한다(프로바이더 무관 — 새 가이드가 와도 이 축에 매핑된다):

| 축 | 내용 | 확인된 사례 |
|---|---|---|
| `autonomy` | 되묻지 않고 끝까지 수행 | Astra 주도성 3종 |
| `delegation` | 위임 시점·비동기 여부 | Astra "병렬화하라" / Fable 5 "비동기로 운영" |
| `verification` | 검증 방식 | Fable 5 "신선한 컨텍스트 검증자" |
| `reporting` | 보고 근거 | Fable 5 "도구 결과 대조" |
| `legibility` | 에이전트 간 메시지 가독성 | Astra "사람이 읽는다, 띄어쓰기" |
| `context` | 컨텍스트 예산 노출 | Fable 5 "남은 토큰 보여주지 말 것" |
| `precedence` | 사용자 지시 vs 스킬 지침 | Astra 우선순위 프롬프트 |

**수용 기준:** 보정은 **모델별로 다르게** 적용되며, 적용된 축과 출처가 산출물에 기록된다.

### MA6. 소프트 스위치 지원
Qwen 의 `/think`·`/no_think` 처럼 **프롬프트 본문에 들어가는** 제어를 프로파일이 표현할 수 있어야 한다
(API 파라미터만으로는 부족).

### MA7. 에이전트 생성 시 자동 배치 — **이 릴리스의 중심**
Phase 4 에서 에이전트를 만들 때 **역할 특성 → 라벨 → 프로파일** 경로로 `model` 과 추론 강도가 자동으로 붙는다.
지금은 `agent-design-patterns.md:226` 이 "모든 에이전트는 opus" 라고만 말해 **배치라는 개념이 없다**.

**배치 매핑(초안 — 설계서에서 확정):**

| 에이전트 성격 | 티어 | 근거 |
|---|---|---|
| 설계 · 아키텍처 · ADR | `deep` | 되돌리기 어려운 결정. 재작업 비용이 모델 비용을 압도한다 |
| 판정 · 검증 · 보안 감사 | `deep` | **거짓 통과의 비용이 크다** — v1.7.5 가 26종을 잡은 자리 |
| 구현 · 리팩터 | `deep` (멀티턴) / `standard` (단발) | Qwen 반례(§3-2) — 멀티턴에서 티어를 낮추면 재시도로 총비용이 늘어난다 |
| 문서 동기화 · 릴리스 | `standard` | 규칙 기반이고 결과를 기계로 검증할 수 있다 |
| 조율 · 오케스트레이션 | `standard` | 주 업무가 위임이라 추론량보다 지시 준수가 중요하다 |
| 수집 · grep · 구조 검증 · 트리거 eval | `light` | 단발 · 기계적 · 검증 가능 |

**추론 강도도 티어에 묶는다** — 프로바이더별 기본값이 다르므로(Fable 5 `high` 기본 / Gemini 3.8 `MEDIUM` 기본)
티어 → 강도 매핑은 프로파일이 소유하고 정본은 라벨만 말한다.

**"효율"의 정의:** 모델 단가가 아니라 **실패·재시도를 포함한 총비용**이다(§3-2).
따라서 티어 하향은 "싸 보이니까"가 아니라 **작업이 단발이고 결과를 기계로 검증할 수 있을 때**만 한다.

**수용 기준:** ① 생성된 에이전트 정의에 티어와 **선정 근거**가 주석으로 남는다 ② 같은 성격의 에이전트가
두 번 생성되면 같은 티어가 나온다(결정적) ③ 매핑표에 없는 성격은 `standard` 로 떨어지고 그 사실이 기록된다
④ **인터뷰의 "실패 비용" 답을 바꾸면 배분 비율이 실제로 달라진다**(HI6 결선 회귀와 같은 틀).

### MA8. 부패 감지 — 가이드도 모델도 **스캔 대상 포맷도** 썩는다
프로파일 항목마다 **출처 URL 과 확인 날짜**를 필수로 기록한다.
정책 감사가 **확인 날짜가 N일 이상 지난 항목**을 warn 한다.

**부패하는 것은 프로파일만이 아니다**(실측 이력):

| 부패 대상 | 사례 |
|---|---|
| 모델 ID | `gpt-5.4-mini` → 400 · gemini CLI → `IneligibleTierError` |
| 가이드 처방 | GPT-5.6 "프롬프트를 줄여라" → Astra "성향을 이해하고 방향을 잡아라"로 역전 |
| **런타임 도구 목록** | `TeamCreate`/`TeamDelete` 제거(CLI v2.1.178) — 정본이 죽은 도구를 가리켰다 |
| **에이전트 정의 포맷** | frontmatter 필드가 세대마다 늘어난다(`skills:`·`orchestrates:` 가 그 예) |
| **빌트인 에이전트 목록** | CLI 버전 종속이고 **조회 명령이 없다**(§MA14 실측) |

**수용 기준:** ① `run-policy-audit.sh` 가 stale 프로파일을 경고한다(차단은 하지 않는다 — 가이드 갱신은 사람 일)
② 스캔 산출물에 **런타임 버전**을 기록한다 ③ 모르는 frontmatter 필드는 **버리지 않고 보고**한다
(포맷이 바뀐 것을 알 수 있어야 한다).

### MA9. 실측 검증 — 보정이 실제로 효과가 있는가
v1.7.5 에서 만든 **벤치 러너·궤적 채점기·케이스 세트**로 보정 주입 전/후를 측정한다.

**수용 기준:** 보정을 정본에 넣기 전에 **before/after 실측 결과**가 결과서에 있다.
효과가 확인되지 않은 보정은 넣지 않는다.

### MA10. 로컬 런타임 탐지 — 상태가 3단계다
클라우드는 `command -v` 하나로 끝나지만 로컬은 **설치 / 서버 가용 / 모델 보유**가 각각 다르다.

| 상태 | 판정 | 조치 |
|---|---|---|
| 런타임 미설치 | 사용 불가 | 없음 |
| 설치됨 · 모델 없음 | 사용 불가 | **pull 을 자동으로 하지 않는다**(수 GB) — 안내만 |
| 설치됨 · 모델 있음 · 서버 꺼짐 | **조건부 가용** | 자동 기동 여부는 런타임별로 다름(§10-2) |
| 설치됨 · 서버 가용 | 즉시 사용 | — |

**수용 기준:** 탐지 스크립트가 `LOCAL_RUNTIMES:` · `LOCAL_MODELS:` · `LOCAL_STATUS:` 3줄 계약으로 보고한다.
`check-review-tools.sh` 의 `SHADOWED:` 선례를 따라 **"없음"과 "있는데 못 씀"을 구분**한다.

### MA11. OpenAI 호환 엔드포인트를 통일 접근 경로로
실측 결과 ollama 가 `/v1/chat/completions` 를 200 으로 응답하고 `usage` 토큰까지 반환한다(§10-1).
LM Studio·llama.cpp·vLLM 도 같은 규약을 노출한다.

**수용 기준:** 로컬 프로바이더 어댑터는 **OpenAI 호환 스키마 하나만** 다룬다.
런타임별 특수 처리는 `{base_url, 기동 명령}` 두 필드로 흡수한다.

### MA12. 자원 점유 정책 — 자동 기동은 옵트인, pull 은 금지
로컬 모델은 **RAM·GPU 를 점유**한다. 클라우드에 없는 부작용이다.

**수용 기준:** ① 모델 pull 은 어떤 경로로도 자동 실행하지 않는다 ② 서버 자동 기동은 명시 옵트인
(`LOCAL_AUTOSTART=1`) ③ 기동한 서버는 누가 켰는지 산출물에 기록한다.

### MA13. 로컬 모델 티어는 실측으로 확정한다
파라미터 수는 티어의 **추정치**일 뿐이다. 실측(§10-3)에서 268M 모델은 판정 자체를 못 했고,
4.3B 는 판정은 맞췄으나 근거가 부정확했다.

**수용 기준:** 로컬 모델의 티어는 v1.7.5 벤치 러너·케이스 세트로 **측정한 결과**로 정한다.
추정만으로 `light` 라벨을 부여하지 않는다.

### MA15. 인터뷰에 모델 항목 두 개를 **이때** 추가한다
v1.7.6 인터뷰(HI2)는 다섯 항목만 묻는다 — 완료 판정 · 비가역 경계 · 실패 비용 · 승인 지점 · 기존 자산.
**모델 관련 두 항목은 v1.7.6 에서 의도적으로 뺐다: 소비처가 이 릴리스에 생기기 때문이다.**

| 추가 항목 | 무엇을 결정하는가 | 소비하는 요구 |
|---|---|---|
| **외부 반출 가부** — 이 하네스가 다루는 내용을 외부 API 로 보내도 되는가 | 가용 프로바이더 집합. '아니오'면 클라우드 전부 탈락 | MA2 어댑터 · (v1.7.8) 로컬 |
| **실패 비용 비대칭** *(v1.7.6 에서 이미 수집)* | `deep`/`standard`/`light` **배분 비율** | MA7 배치 |

**소비처 없는 수집을 금지하는 이유:** 답을 받아놓고 아무도 읽지 않는 필드는 이 레포가 이미 겪은
`REVIEWERS_OVERRIDE` 계열이다 — 런처가 export 했지만 `run-review.sh` 에 읽는 코드가 없어
네 프로세스가 같은 산출물에 동시에 썼고 **R11 을 통째로 무효 처리**했다.
"외부 반출 가부"는 나중에 물어도 소급이 되므로 v1.7.6 에서 묻지 않는다.

**수용 기준:** ① 두 항목이 HI5 결선표에 소비처와 함께 등재된다
② 기존 하네스(v1.7.6 에서 생성된 것)는 **재인터뷰 없이** 기본값으로 동작하고, 그 사실이 프로파일에 기록된다.

---

## 5. 범위

### v1.7.7 포함 — **최신 클라우드 모델의 배치·활용**
- **MA7 에이전트 자동 배치** ← 이번 릴리스의 중심. 성격 → 티어 → 프로파일
- **MA15 인터뷰 모델 항목 2개 추가** — v1.7.6 인터뷰에 이 릴리스의 소비처가 생긴 만큼만 얹는다
- MA1(라벨) · MA2(어댑터) · MA3(금지값) · MA4(파라미터 제거) · MA8(부패 감지)
- 프로파일 초기 등록: Anthropic · OpenAI · Google · Qwen **클라우드** (확인된 것만)
- `SKILL.md` ↔ `agent-design-patterns.md` **모순 해소**
- 계약 테스트(오프라인 파라미터 조립 검증)
- **sLM 확장 슬롯 예약**(MA2) — 필드 자리만 두고 값은 채우지 않는다

### 선행 의존 (v1.7.6 산출물을 입력으로 받는다)

| v1.7.6 이 만드는 것 | 이 릴리스가 쓰는 곳 |
|---|---|
| 에이전트 스캔 계약(HI9, 구 MA14) | MA7 배치 대상 목록 · v1.7.6 의 `MODEL:` 관측값을 읽어 **이 릴리스가 `UNTIERED:` 를 파생**한다 |
| "실패 비용 비대칭" 답 | MA7 티어 배분 비율 |
| "비가역성 경계" 답 | MA7 판정·보안 에이전트를 `deep` 으로 올리는 근거 |
| 결선 회귀 테스트 틀(HI6) | MA15 수용 기준을 같은 틀로 검증 |

**v1.7.6 이 없으면 이 릴리스는 배분 기준을 지어내야 한다.** 순서를 되돌리지 않는다.

### 비목표 (v1.7.8+ 이월)
| 항목 | 사유 |
|---|---|
| MA5 행동 보정 **주입** | MA9 실측이 선행돼야 한다. 근거 없는 규칙 추가는 Fable 5 가이드가 정면으로 반대 |
| MA6 소프트 스위치 | Qwen 런타임을 이 레포가 아직 쓰지 않는다 — 실사용 시점에 |
| 프로바이더 SDK 직접 호출 | 하네스는 CLI 를 통해 모델을 쓴다. API 파라미터 조립은 **CLI 가 지원하는 범위**로 한정 |
| 비용 최적화 자동화 | Qwen 반례(§3-2) 때문에 측정 없이 티어를 낮추면 역효과 |
| **MA10~MA13 로컬/sLM 전체** | **사용자 범위 결정** — 한 번의 작업에 복잡도를 몰아넣지 않는다. 이 릴리스는 클라우드 배치·활용에 집중하고, 로컬은 **스키마가 담을 수 있는지만**(MA2 확장 슬롯) 확인한다. 실측 근거는 §10 에 보존(→ **v1.7.8**) |
| 로컬 모델을 **외부 리뷰어 축**으로 | §10-4 부적합 판정 — 판정 신뢰도가 게이트 기준에 못 미친다(v1.7.8 에서도 유지) |

---

## 6. 설계 방향 (요약 — 상세는 설계서로 분리)

### 6-1. 3층 구조

```
에이전트 특성(역할·리스크)
        ↓  L1: 역할 라벨      deep / standard / light
        ↓  L2: 프로바이더 어댑터   라벨 → {모델ID, 추론필드=값, drop[], 소프트스위치}
        ↓  L3: 행동 보정        축별 프롬프트 조각(모델 귀속)
     실행(런타임 CLI)
```

**L1 은 정본이 소유하고, L2·L3 는 프로파일 파일 하나가 소유한다.**
정본은 모델을 모른다 — 이것이 부패 방어의 핵심이다.

### 6-2. 이미 있는 것과 연결

가이드 권고의 절반은 이 레포에 이미 구현돼 있다. **새로 만들 게 아니라 연결한다.**

| 가이드 권고 | 기존 기구 |
|---|---|
| Fable 5 "도구 결과 대조 후 근거 있는 보고" | `grade-trajectory.sh` 의 `report_matches_calls` (v1.7.5) |
| Fable 5 "신선한 컨텍스트 검증자" | `external-review-loop` — 러너 엔진 제외 독립 판정 |
| Astra "스킬 파일 감사" | `run-policy-audit.sh` · `check-behaviors.sh` |
| Astra "지시 우선순위 명시" | ADR-001 D1 — 단일 정본 |
| 양쪽 "위임·비동기" | `orchestrator-template.md` 패턴 A/B (블로킹 규정은 없음 → 보완 대상) |
| Astra "에이전트 간 메시지 가독성" | **없음** — 신설 대상 |

### 6-3. 소유 경계 결정 필요 (ADR)

행동 보정(MA5)은 **"행동 요구"인가 "런타임 특성 보정"인가?**
ADR-001 D1 은 행동 요구를 BEHAVIOR 가 소유한다고 정했다. 그런데 모델 보정은
*그 모델에서만* 유효한 임시 처방이라 BEHAVIOR 의 "판단 기준"과 성격이 다르다.

**→ ADR-002 로 소유 경계를 먼저 정한다.** 이 결정 없이 MA5 를 구현하면
Astra 가 경고한 "상충하는 지침"을 우리 손으로 만든다.

---

## 7. 우선순위

| 순위 | 항목 | 근거 |
|---|---|---|
| P0 | 정본 모순 해소(§1-1 가) | 지금 라우팅 정책이 작동하지 않는다. 다른 모든 작업의 전제 |
| P0 | MA1 라벨 + MA2 어댑터 | 모델명 부패 방어. 이미 두 번 데었다 |
| P0 | **MA7 에이전트 자동 배치** | 이번 릴리스의 목적. 지금은 배치 개념 자체가 없다 |
| P1 | **MA15 인터뷰 모델 항목** | 소비처(MA2·MA7)가 이 릴리스에 생긴 뒤에만 묻는다 |
| P1 | MA3 금지값 + MA4 파라미터 제거 | 400 오류 = 게이트 정지. 실측된 위험 |
| P1 | MA8 부패 감지 | 가이드·모델 양쪽이 썩는다 |
| P2 | Grok 등 미확인 프로바이더 조사 | 범용성 요구 충족 |
| P2 | ADR-002 소유 경계 | MA5 의 전제 |
| P3 | MA9 실측 → MA5 주입 | 근거 확보 후 |
| — | MA10~MA13 로컬/sLM | **v1.7.8 이월**(범위 결정). §10 실측이 그 계획서의 입력이다 |
| — | HI9 에이전트 스캔 | **v1.7.6 선행**. 이 릴리스는 그 출력 계약을 소비만 한다 |

---

## 8. 위험

| 위험 | 영향 | 완화 |
|---|---|---|
| **프로파일이 새 정본 단일 장애점이 된다** | 잘못 쓰면 전 하네스가 잘못된 모델로 돈다 | 계약 테스트 + 정책 감사 + 중대 등급 게이트 |
| **가이드 해석이 주관적이다** | 보정 프롬프트가 원문 의도와 어긋남 | 원문 링크·인용 필수(MA8), 의역 금지 |
| **라벨 3단계가 부족할 수 있다** | 프로바이더가 4~5단계를 제공 | 라벨은 **하네스의 언어**다. 프로바이더 단계 수와 1:1 대응하지 않는다는 것을 명시 |
| **측정 없이 티어를 낮춰 역효과**(§3-2) | 토큰·시간 오히려 증가 | MA9 선행. 비용 최적화는 비목표 |
| **정본 변경 = 중대 blast-radius** | 전 생성 하네스 전파 | stabilizer 게이트(정책감사 + 외부리뷰 + 회귀 드라이런) |
| **CLI 가 파라미터를 지원하지 않을 수 있다** | 조립해도 전달 불가 | v1.7.5 실측 교훈 — `--allowedTools` 는 아무것도 빼지 않았다. **CLI 실제 동작을 실측한 뒤에만 계약으로 삼는다** |
| **스캔 스크립트 자체의 이식성** | Windows·macOS 에서 다른 결과 | Node `.mjs` 채택(MA14) · 3-OS CI 에서 **동일 출력**을 수용 기준으로 |
| **에이전트 정의 포맷·빌트인 목록이 버전 종속** | 스캔이 조용히 낡는다 | 런타임 버전 기록 · 모르는 필드 보고 · 빌트인은 `unknown` 으로 명시(추측 금지) — MA8·MA14 |

---

## 10. 로컬 LLM · sLM — **v1.7.8 이월. 실측 근거만 보존한다**

> **이 절은 이 릴리스의 범위가 아니다.** 사용자 범위 결정(2026-09-10)에 따라 로컬/sLM 은 **고려만** 한다 —
> v1.7.7 에서 하는 일은 **MA2 확장 슬롯 예약**(필드 자리만 두기)뿐이고, 아래 실측은 **v1.7.8** 계획서의 입력이다.
> 실측을 먼저 해 둔 이유는 **스키마가 로컬을 담을 수 있는지 지금 판단해야** 하기 때문이다 — 답은 "담을 수 있다"이고(§10-1),
> 그래서 v1.7.7 에서 구현하지 않아도 나중에 스키마를 갈아엎지 않는다.

**질문:** Qwen·Gemma 같은 로컬 모델은 인식돼야 쓸 수 있는데, 효과적으로 쓸 방안이 있는가.
2026-09-10 이 개발 머신에서 직접 확인했다.

### 10-1. 실측 결과

| 항목 | 결과 |
|---|---|
| 런타임 | `ollama`·`lms`(LM Studio)·`llama-server`/`llama-cli` **설치됨** · vLLM·mlx 없음 |
| 서버 초기 상태 | 11434·1234·8080·8000 **전부 응답 없음(꺼져 있음)** |
| 모델 보유 | 6개 — `gemma3:270m`(268M) · `qwen2.5-coder:1.5b` · `gemma3:4b`(4.3B) · `qwen35-ab-tuned`(9.7B) 외 |
| **자동 기동** | `ollama run` 이 서버를 자동 기동 — **1초 만에 응답** |
| **API 규약** | `/v1/chat/completions` **200 · OpenAI 호환** · `usage` 토큰 반환 · `/v1/models`·`/api/tags` 200 |
| 컨텍스트 | 270m·1.5b = 32K · 4b = **131K** · 9.7B = **262K** |
| 판정 품질(4.3B) | 거짓 보고 케이스에 **`MISMATCH` 정답**. 단 근거는 부정확("script failed" — 실제 원인은 횟수 불일치) |
| 속도 | 짧은 판정 **20초** |

> **핵심:** 모델과 런타임은 이미 있고, 접근 규약도 OpenAI 호환으로 통일돼 있다.
> 빠진 것은 **탐지**뿐이다 — 사용자 지적이 정확했다.

### 10-2. 클라우드와 다른 세 가지

1. **상태가 3단계다** — 설치 / 서버 가용 / 모델 보유. `command -v` 로는 절반만 안다.
2. **자원을 점유한다** — RAM·GPU. 클라우드에 없는 부작용이라 자동 기동은 옵트인이어야 한다.
3. **모델 목록이 사용자마다 다르다** — 프로바이더가 정한 고정 목록이 아니라 `pull` 한 것만 있다.
   pull 은 수 GB 다운로드라 **어떤 경로로도 자동 실행하면 안 된다**.

### 10-3. 티어는 극단적으로 갈린다

같은 "로컬 모델"이지만 268M 과 9.7B 는 다른 종류다. 실측에서 268M 은 판정 작업 자체를 수행하지 못했고,
4.3B 는 판정은 맞췄으나 근거를 짚지 못했다. **파라미터 수로 티어를 추정할 수는 있어도 확정할 수는 없다**(MA13).

### 10-4. 용도별 적합도 — 세 후보 중 둘

| 용도 | 적합도 | 근거 |
|---|---|---|
| **cheap-judge**(벤치 채점 1차 필터) | **적합** | `self-improvement-loop.md §10` 이 이미 "측정·감지는 경량 모델"을 요구. 판정이 이진이고 궤적이 짧다. 4.3B 가 실제로 맞췄다 |
| **`light` 티어 단발 작업** | **적합** | grep·구조 검증·트리거 eval. 단 Qwen 반례(§3-2)로 **멀티턴은 제외** |
| 외부 리뷰어 3번째 축 | **부적합(현재)** | 리뷰 프롬프트가 70KB 이고, codex 가 33라운드에서 찾은 결함(락 소유권·검사 위치 오류)을 4B 급이 찾을 가능성이 낮다. 게이트 신뢰도 기준 미달 |

### 10-5. 가장 큰 값어치 — 측정 비용이 0이 된다

B3(BEHAVIOR 홀드아웃 검증)는 **비용 때문에 막혀 있다.** v1.7.5 계획서 추산이 96회 실행이고,
이는 B3-lite 실측 6회의 **16배**다. 이 비용 합의가 B3-pre 의 마지막 미완 항목(④)이다.

**로컬 모델은 토큰 과금이 없다.** 반복 R회·통계 기준·baseline 캐싱 같은 §8 요구를 실행할 때
비용 제약이 사라진다. 느린 것(20초/판정)은 병렬·비동기로 흡수할 수 있다.

> 로컬 LLM 의 값어치는 "클라우드를 대체한다"가 아니라 **"측정을 가능하게 한다"** 쪽에 있다.
> 그리고 측정이 되면 MA13(티어 확정)·MA9(보정 효과 검증)이 모두 풀린다.

---

## 9. 출처 (확인일 2026-09-10)

- Claude Fable 5 프롬프팅 가이드 — https://discuss.pytorch.kr/t/anthropic-claude-fable-5/11062 (원문: platform.claude.com prompting-claude-fable-5)
- GPT-6 Astra 공식 활용 가이드 — https://discuss.pytorch.kr/t/openai-gpt-6-astra/11846
- Gemini 3.8 Flash — https://ai.google.dev/gemini-api/docs/latest-model · https://docs.cloud.google.com/gemini-enterprise-agent-platform/models/guides/gemini-3-8-flash · https://ai.google.dev/gemini-api/docs/thinking
- Qwen thinking/effort — https://docs.qwencloud.com/developer-guides/text-generation/thinking · https://qwen.readthedocs.io/en/latest/getting_started/quickstart.html
- xAI Grok — **미확인**
- 로컬 런타임·모델 — **이 개발 머신 직접 실측**(2026-09-10, §10-1). ollama 0.x · LM Studio · llama.cpp

---

## 다음 단계 참조

- **P0 부터 착수한다** — 정본 모순 해소 + 라벨·어댑터. 이것만으로도 모델명 부패 방어가 된다.
- MA5(행동 보정 주입)는 **ADR-002 소유 경계 결정과 MA9 실측 이후**다. 순서를 바꾸면 상충 지침을 우리가 만든다.
- 설계서(`docs/v1.7.7/design/`)에서 프로파일 스키마·어댑터 계약·계약 테스트 목록을 확정한다.
- 정본 변경이므로 **stabilizer 게이트**(정책감사 · 외부리뷰 no-high 2연속 · 회귀 드라이런) 통과 후 배포한다.
- **스캔(HI9)은 v1.7.6 이 만든다.** 이 릴리스는 `AGENTS_PROJECT:`·`MODEL:` 출력을 읽어 `UNTIERED:` 를 파생한다(티어 개념은 MA1 이 도입).
  스캔이 결정적이지 않으면 "같은 성격이면 같은 티어"가 성립하지 않으므로, v1.7.6 수용 기준 통과를 전제로 착수한다.
- **이 릴리스의 성패는 MA7(배치)이다.** 라벨·어댑터는 수단이고, 목적은 "에이전트 성격에 맞는 모델이 자동으로 붙는가"다.
- **로컬/sLM 은 v1.7.8 이다**(§10). 이 릴리스에서는 **확장 슬롯만 예약**하고 값을 채우지 않는다 —
  스키마가 담을 수 있음은 실측으로 확인됐으므로(OpenAI 호환 API), 나중에 갈아엎지 않는다.
  이월 시 첫 투입처는 **cheap-judge** 이고 그것이 B3 비용 제약을 푼다(§10-5). 외부 리뷰어로는 쓰지 않는다(§10-4).
- Grok·기타 프로바이더는 P2 로 조사한다 — 범용성 요구는 "스키마가 담을 수 있는가"로 충족하고, 등록은 확인된 것만 한다.
